<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to" />

    <EditText
    android:id="@+id/input_send_to"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/enter_email"
    android:layout_centerInParent="true"/>

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:layout_centerInParent="true"/>

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>